Frontend init, working bootstrap