@@ -5,6 +5,7 @@ import com.wp.storage.StorageService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
+import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -14,12 +15,14 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.method.annotation.MvcUriComponentsBuilder;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
-import java.io.DataInputStream;
-import java.io.DataOutputStream;
-import java.io.IOException;
+import java.io.*;
 import java.net.DatagramSocket;
+import java.net.MalformedURLException;
 import java.net.Socket;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.stream.Collectors;
 
 @Controller
@@ -27,16 +30,16 @@ public class FileUploadController {
 
     private final StorageService storageService;
 
-    private final DatagramSocket ds;
+    @Value("${pythonadress}")
+    private String adress;
 
-    String adress;
+    @Value("${pythonsocket}")
+    private String port;
 
 
     @Autowired
-    public FileUploadController(StorageService storageService, DatagramSocket datagramSocket,@Value("${pythonadress}") String pythonadress) {
+    public FileUploadController(StorageService storageService) {
         this.storageService = storageService;
-        this.ds = datagramSocket;
-        this.adress = pythonadress;
         System.out.println(this.adress);
     }
 
@@ -48,7 +51,8 @@ public class FileUploadController {
                                 "serveFile", path.getFileName().toString()).build().toUri().toString())
                 .collect(Collectors.toList()));
 
-        return "uploadForm";
+        //return "uploadForm";
+        return "index";
     }
 
     @GetMapping("/files/{filename:.+}")
@@ -64,6 +68,15 @@ public class FileUploadController {
                 "attachment; filename=\"" + file.getFilename() + "\"").body(file);
     }
 
+    @GetMapping("/assets/bootstrap/{javaorcss}/{filename}")
+    @ResponseBody
+    public ResponseEntity<Resource> returnResources(@PathVariable String filename, @PathVariable String javaorcss) throws MalformedURLException {
+        System.out.println(filename + javaorcss);
+        Path file = Paths.get("src/main/resources/templates/assets/bootstrap/"+javaorcss+"/"+filename);
+        Resource resource = new UrlResource(file.toUri());
+        return ResponseEntity.ok().body(resource);
+    }
+
     @PostMapping("/")
     public String handleFileUpload(@RequestParam("file") MultipartFile file,
                                    RedirectAttributes redirectAttributes){
@@ -71,10 +84,13 @@ public class FileUploadController {
         try(Socket socket = new Socket("127.0.0.1",11000)){
             DataOutputStream out = new DataOutputStream(socket.getOutputStream());
             DataInputStream in = new DataInputStream(socket.getInputStream());
+            System.out.println("Wysłem");
             out.write(file.getBytes());
             out.write("\r\n".getBytes());
             out.flush();
-            System.out.println(new String(in.readAllBytes(), StandardCharsets.UTF_8));
+            Path p1 = Path.of("plik.jpg");
+            Path p2 = Files.createFile(p1);
+            Files.write(p2, in.readAllBytes());
         }
         catch (Exception e){
             System.out.println(e.getCause());
